<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/home"
        android:title="@string/home"/>

    <item
        android:id="@+id/navigation_category"
        android:icon="@drawable/mainmenu"
        android:title="@string/category" />

    <item
        android:id="@+id/navigation_wishlist"
        android:icon="@drawable/heart"
        android:title="@string/wishlist" />

    <item
        android:id="@+id/navigation_order_list"
        android:icon="@drawable/list"
        android:title="@string/orderlist" />

<!--    <item-->
<!--        android:id="@+id/navigation_settings"-->
<!--        android:icon="@drawable/gear"-->
<!--        android:title="@string/setting" />-->
</menu>