<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/user"
            android:title="@string/account" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/settings"
            android:title="@string/setting" />
        <item
            android:id="@+id/nav_lang"
            android:icon="@drawable/translation"
            android:title="@string/lang" />
<!--        <item-->
<!--            android:id="@+id/nav_info"-->
<!--            android:icon="@drawable/info"-->
<!--            android:title="@string/about_us" />-->
<!--        <item-->
<!--            android:id="@+id/nav_call"-->
<!--            android:icon="@drawable/customer"-->
<!--            android:title="@string/phone_number1" />-->
    </group>
</menu>