<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/aksiya_view"
    android:layout_width="@dimen/_135sdp"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/_5sdp"
    card_view:cardBackgroundColor="@color/white"
    card_view:cardCornerRadius="@dimen/_10sdp">

    <ImageView
        android:id="@+id/add_wishlist"
        android:layout_width="@dimen/_20sdp"
        android:layout_height="@dimen/_20sdp"
        android:src="@drawable/heart"
        android:layout_marginEnd="@dimen/_5sdp"
        android:layout_gravity="end"
        android:elevation="@dimen/_2sdp"
        android:layout_marginTop="@dimen/_5sdp"/>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="@dimen/_35sdp"
        android:layout_height="@dimen/_15sdp"
        android:elevation="@dimen/_5sdp"
        android:background="@drawable/skidka">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_20"
            android:textStyle="italic"
            android:elevation="@dimen/_5sdp"
            android:textSize="@dimen/_8sdp"
            android:textColor="@color/white"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
    <LinearLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/_5sdp"
        android:layout_gravity="center_horizontal">

        <ImageView
            android:id="@+id/img_products"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="@dimen/_100sdp"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@null"
            android:src="@drawable/pers"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/price_aksiya"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_120_tmt"
                android:textAlignment="center"
                android:layout_marginStart="@dimen/_5sdp"
                android:textSize="@dimen/_10sdp"
                android:textColor="@color/gr_top"
                android:textStyle="bold"
                />


            <TextView
                android:id="@+id/price_products"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_150_tmt"
                android:textAlignment="center"
                android:layout_marginStart="@dimen/_8sdp"
                android:textSize="@dimen/_8sdp"
                android:textColor="@color/red"
                android:textStyle="normal"
                />



        </LinearLayout>


        <TextView
            android:id="@+id/name_products"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/category"
            android:layout_marginTop="@dimen/_5sdp"
            android:textAlignment="center"
            android:layout_marginStart="@dimen/_5sdp"
            android:textSize="@dimen/_10sdp"
            android:textColor="@color/black"
            android:textStyle="italic"
            />

        <LinearLayout
            android:layout_width="@dimen/_120sdp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginBottom="@dimen/_5sdp">

            <Button
                android:id="@+id/add_cart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_product"
                android:textSize="@dimen/_11sdp"
                android:textAlignment="center"
                />


        </LinearLayout>






    </LinearLayout>
</androidx.cardview.widget.CardView>