<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.Product_details">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:gravity="center_vertical"
        android:padding="@dimen/_5sdp"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:id="@+id/relativeLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/_5sdp"
            >

            <ImageView
                android:id="@+id/products_img"
                android:layout_width="@dimen/_150sdp"
                android:layout_height="@dimen/_150sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_gravity="center_horizontal"
                android:contentDescription="@null"
                android:src="@drawable/pers"
                />

            <TextView
                android:id="@+id/products_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/category"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:padding="@dimen/_5sdp"
                android:textSize="@dimen/_12sdp"
                android:textColor="@color/black"
                android:textStyle="italic"
                />

            <TextView
                android:id="@+id/products_descrip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/description"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:padding="@dimen/_5sdp"
                android:textSize="@dimen/_12sdp"
                android:textColor="@color/black"
                android:textStyle="italic"
                />


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginBottom="@dimen/_5sdp"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/products_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:layout_marginTop="@dimen/_2sdp"
                    android:layout_marginBottom="@dimen/_3sdp"
                    android:gravity="center_vertical"
                    android:padding="@dimen/_5sdp"
                    android:text="@string/_150_tmt"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_13sdp" />

                <Button
                    android:id="@+id/add_cart_prod"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add_product"
                    android:layout_marginStart="@dimen/_15sdp"
                    android:textSize="@dimen/_11sdp"
                    android:textAlignment="center"
                    />

            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>