<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/category_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/_10sdp"
    android:orientation="vertical"
    android:background="@color/white"
    card_view:cardBackgroundColor="@color/white"
    card_view:cardCornerRadius="@dimen/_10sdp">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:gravity="center_vertical"
        android:padding="@dimen/_5sdp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <ImageView
                android:id="@+id/img_wish"
                android:layout_width="@dimen/_75sdp"
                android:layout_height="@dimen/_85sdp"
                android:layout_gravity="center_vertical"
                android:contentDescription="@null"
                android:src="@drawable/cartt"
                card_view:tint="@color/gr_top" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/_5sdp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/name_wish"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:padding="@dimen/_5sdp"
                    android:text="@string/products"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_15sdp" />

                <TextView
                    android:id="@+id/description_wish"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:padding="@dimen/_5sdp"
                    android:text="@string/description"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_15sdp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_marginBottom="@dimen/_5sdp"
                    android:orientation="horizontal">
                    <TextView
                        android:id="@+id/price_wish"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_5sdp"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:gravity="center_vertical"
                        android:padding="@dimen/_5sdp"
                        android:text="@string/_150_tmt"
                        android:textStyle="bold"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_15sdp" />

                    <Button
                        android:id="@+id/add_cart_wish"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/add_product"
                        android:layout_marginStart="@dimen/_15sdp"
                        android:textSize="@dimen/_11sdp"
                        android:textAlignment="center"
                        />







                </LinearLayout>


            </LinearLayout>




        </LinearLayout>

    </RelativeLayout>

</androidx.cardview.widget.CardView>